Added major modules
Co-authored-by: VIKAS KESHAVAMURTHY BHAT <vikaskeshavamurthybhat.201cs266@nitk.edu.in>

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
               <h3><a href="./modules/file-allocation/index.html">File Allocation</a></h3>
             </div>
           </div>
-         
+
         </div>
 
       </div>
@@ -196,115 +196,102 @@
 
 
 
-
-
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team section-bg">
-      <div class="container">
+    <section id="modules" class="features">
+      <div class="container ">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Team</h2>
+          <h2>TEAM</h2>
+          <p>All fundamental modules of a modern Operating System</p>
         </div>
 
-        <div class="row d-flex align-items-stretch">
-
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="100">
-
-              <div class="member-info">
-                <h4>Dibyam Kumar</h4>
-                <span>201CS266</span>
-                <span>Team Leader</span>
+        <div class="row d-flex justify-content-center" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Dibyam Kumar</h3>
+                <h6>201cs270</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="200">
-
-              <div class="member-info">
-                <h4>T Naga Tarun</h4>
-                <span>201CS261</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>T Naga Tarun</h3>
+                <h6>201CS261</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-
-              <div class="member-info">
-                <h4>Tijin Abe Thomas</h4>
-                <span>201CS262</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Tijin Abe Thomas</h3>
+                <h6>201CS262</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
 
-              <div class="member-info">
-                <h4>Tulsidas Naik</h4>
-                <span>201CS263</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Tulsidas Naik</h3>
+                <h6>201CS263</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-
-              <div class="member-info">
-                <h4>Umais Rifah</h4>
-                <span>201CS264</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Umais Rifah</h3>
+                <h6>201CS264</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-
-              <div class="member-info">
-                <h4>Vaishnavi L.</h4>
-                <span>201CS265</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Vaishnavi L.</h3>
+                <h6>201CS265</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-
-              <div class="member-info">
-                <h4>Vikas K. Bhat</h4>
-                <span>201CS266</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Vikas K. Bhat</h3>
+                <h6>201CS266</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-
-
-              <div class="member-info">
-                <h4>Vishal Kumar Pal</h4>
-                <span>201CS267</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Vishal Kumar Pal</h3>
+                <h6>201CS267</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="300">
-              <div class="member-info">
-                <h4>Swaroop</h4>
-                <span>201CS268</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Swaroop</h3>
+                <h6>201CS268</h6>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
-            <div class="member" data-aos="fade-up" data-aos-delay="400">
-
-              <div class="member-info">
-                <h4>Shishirdeep</h4>
-                <span>191CS</span>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box" style="display: flex; flex-direction: column; align-items: center;">
+              <div class=" member-details" style="display: flex; flex-direction: column; align-items: center;">
+                <h3>Shishirdeep</h3>
+                <h6>16CO248</h6>
               </div>
             </div>
           </div>
@@ -312,7 +299,7 @@
         </div>
 
       </div>
-    </section><!-- End Team Section -->
+    </section><!-- End Features Section -->
 
 
 
