--- a/modules/disk-scheduling/disk-scheduling.html
+++ b/modules/disk-scheduling/disk-scheduling.html
@@ -51,7 +51,7 @@
     ZC.LICENSE = ["569d52cefae586f634c54f86dc99e6a9", "ee6b7db5b51705a13dc2339db3edaf6d"];</script>
 
   <!-- SCRIPT FOR THE PAGE-->
-  <title>First-In First-Out</title>
+  <title>Disk Scheduling</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
