--- a/modules/memory-management/mft-worst-fit.html
+++ b/modules/memory-management/mft-worst-fit.html
@@ -45,7 +45,7 @@
   ======================================================== -->
 
   <!-- SCRIPT FOR THE PAGE-->
-  <title>First-In First-Out</title>
+  <title>MFT Worst Fit</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
