--- a/modules/process-syncronization/index.html
+++ b/modules/process-syncronization/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - Vesperr Bootstrap Template</title>
+  <title>Index - synchronization</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -149,11 +149,6 @@
               <h3><a href="./barrier.html">Barrier Semaphore</a></h3>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 mt-4">
-            <div class="icon-box">
-              <i class="ri-database-2-line" style="color: #47aeff;"></i>
-              <h3><a href="./sleeping-barber.html">Sleeping Barber</a></h3>
-            </div>
           </div>
 
 
