Added system calls

--- a/modules/file-allocation/index.html
+++ b/modules/file-allocation/index.html
@@ -100,8 +100,7 @@
         <div class="flex-container">
           <header>
             <div id="header-button">
-              <h1>CPU Scheduling</h1>
-              <a href="#modules" class="btn-get-started scrollto">Go To Simulations</a>
+              <h1>File Allocation</h1>
             </div>
 
 
