--- a/modules/memory-management/index.html
+++ b/modules/memory-management/index.html
@@ -100,7 +100,7 @@
         <div class="flex-container">
           <header>
             <div id="header-button">
-              <h1>Page Replacement</h1>
+              <h1>Memory Management</h1>
 
             </div>
 
