--- a/modules/process-syncronization/barrier.html
+++ b/modules/process-syncronization/barrier.html
@@ -56,33 +56,29 @@
 </head>
 
 <style>
-  body {
-    font-family: 'PT Sans', sans-serif;
-  }
-
+  body{ font-family: 'PT Sans', sans-serif; } 
   @keyframes FadeOut {
     0% {
       /* position: absolute; */
       opacity: 0;
     }
-
+  
     75% {
       /* position: absolute; */
       opacity: 1;
     }
-
+  
     100% {
       opacity: 1;
     }
   }
-
-  .heading {
-    opacity: 1;
+  .heading{
+  opacity: 1;
     animation-name: FadeOut;
     animation-duration: 5s;
-
-  }
-</style>
+  
+    }
+    </style>
 
 <body style="background-image: url('blck.jpg');height:1500px">
   <!-- ======= Header ======= -->
