--- a/modules/process-syncronization/index.html
+++ b/modules/process-syncronization/index.html
@@ -75,7 +75,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">OS Mini Project</a></h1>
+        <h1><a href="/index.html">OS Mini Project</a></h1>
         <h3>Group 14</h3>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="../../assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -100,7 +100,7 @@
         <div class="flex-container">
           <header>
             <div id="header-button">
-              <h1>CPU Scheduling</h1>
+              <h1>Process Syncronization</h1>
               <a href="#modules" class="btn-get-started scrollto">Go To Simulations</a>
             </div>
 
