--- a/modules/deadlock/bankers.html
+++ b/modules/deadlock/bankers.html
@@ -632,7 +632,7 @@
   <main id="main">
 
     <!-- ======= Breadcrumbs Section ======= -->
-    <section class="inner-page" style="padding: 150px 150p;">
+    <section class="inner-page" style="padding: 150px 150p; margin: 100px 50px;">
 
 
       <div>
@@ -644,7 +644,11 @@
           <input  id = "totalres" onkeyup="addInitialRes()" type="text">
            <button class="btn btn-primary btn-success" style ="float:right;margin-right:20px;" onclick="clear_data()"  >Clear Data</button>
         </div> -->
-
+      <p >
+        The banker’s algorithm is a resource allocation and deadlock avoidance algorithm that tests for safety by
+        simulating the allocation for predetermined maximum possible amounts of all resources, then makes an “safe-state”
+        check to test for possible activities, before deciding whether allocation should be allowed to continue.
+      </p>
       <div class="input-group input-group-lg" style="width: 350px; margin-left: 10px;padding-bottom: 20px">
         <div class="input-group-prepend">
           <span class="input-group-text" id="inputGroup-sizing-lg">Number of Resources:</span>
