--- a/modules/memory-management/mft-next-fit.html
+++ b/modules/memory-management/mft-next-fit.html
@@ -383,6 +383,10 @@
 
           <div class="m-2">
             <h1>Next Fit</h1>
+            <p>
+              Next fit is a modified version of 'first fit'. It begins as the first fit to find a free partition but
+              when called next time it starts searching from where it left off, not from the beginning
+            </p>
             <div class="form-group">
               <label></label>
               <input type="text" class="form-control" id="num-parts" placeholder="Enter number of partitions">
