--- a/modules/cpu-scheduling/index.html
+++ b/modules/cpu-scheduling/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Index - CPU Scheduling</title>
+  <title>Index- CPU Schedulin</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
