Changes to descriptions

--- a/modules/deadlock/index.html
+++ b/modules/deadlock/index.html
@@ -121,8 +121,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Sceduling Algorithms</h2>
-          <p>All fundamental CPU Scheduling algorithms</p>
+          <h2>Deadlock Prevention and Detection</h2>
+          <p>Two common deadlock prevention and detection algorithms</p>
         </div>
 
         <div class="row d-flex justify-content-center" data-aos="fade-up" data-aos-delay="300">
