--- a/modules/file-allocation/indexing.html
+++ b/modules/file-allocation/indexing.html
@@ -209,6 +209,9 @@
     <div class="container">
 
       <h1 class="some" align="center"> Single-level Indexed Scheduling</h1>
+      <p>
+        In this scheme, a special block known as the Index block contains the pointers to all the blocks occupied by a file. Each file has its own index block. The ith entry in the index block contains the disk address of the ith file block.
+      </p>
       <!-- </marquee> -->
       <p> Enter the number of files </p>
       <input id="nof" type="number" class="form-control">
