--- a/modules/file-allocation/linked.html
+++ b/modules/file-allocation/linked.html
@@ -208,6 +208,10 @@
     <div class="container">
 
       <h1 align="center" class="some">Linked Scheduling</h1>
+      <p>
+        In this scheme, each file is a linked list of disk blocks which need not be contiguous. The disk blocks can be scattered anywhere on the disk.
+The directory entry contains a pointer to the starting and the ending file block. Each block contains a pointer to the next block occupied by the file.
+      </p>
       <!-- </marquee> -->
       <p> Enter the number of files </p>
       <input id="nof" type="number" class="form-control">
