--- a/modules/memory-management/index.html
+++ b/modules/memory-management/index.html
@@ -122,7 +122,7 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>MFT Algorithms</h2>
-          <p>All fundamental Page Replacement algorithms</p>
+          <p>This is the oldest and simplest technique used to put more than one process in the main memory. In this partitioning, the number of partitions (non-overlapping) in RAM is fixed but the size of each partition may or may not be the same. As it is a contiguous allocation, hence no spanning is allowed. Here partitions are made before execution or during system configure.</p>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="300">
@@ -160,7 +160,7 @@
       <div class="container">
         <div class="section-title" data-aos="fade-up">
           <h2>MVT Algorithms</h2>
-          <p>All fundamental Page Replacement algorithms</p>
+          <p>MVT is used to alleviate the problem faced by MFT. In contrast with MFT, partitions are not made before the execution or during system configure.</p>
         </div>
 
         <div class="row d-flex justify-content-center" data-aos="fade-up" data-aos-delay="300">
