--- a/modules/memory-management/mft-first-fit.html
+++ b/modules/memory-management/mft-first-fit.html
@@ -395,6 +395,11 @@
 
           <div class="m-2">
             <h1>First Fit</h1>
+            <p>
+              First Fit fits data into memory by scanning from the beginning of available memory to the end, until the
+              first free space which is at least big enough to accept the data is found. This space is then allocated to
+              the data. Any left over becomes a smaller, separate free space.
+            </p>
             <div class="form-group">
               <label></label>
               <input type="text" class="form-control" id="num-parts" placeholder="Enter number of partitions">
