--- a/modules/memory-management/mft-worst-fit.html
+++ b/modules/memory-management/mft-worst-fit.html
@@ -387,6 +387,11 @@
 
           <div class="m-2">
             <h1>Worst Fit</h1>
+            <p>
+              Worst Fit allocates a process to the partition which is largest sufficient among the freely available
+              partitions available in the main memory. If a large process comes at a later stage, then memory will not
+              have space to accommodate it
+            </p>
             <div class="form-group">
               <label></label>
               <input type="text" class="form-control" id="num-parts" placeholder="Enter number of partitions">
