--- a/modules/memory-management/mvt-first-fit.html
+++ b/modules/memory-management/mvt-first-fit.html
@@ -418,7 +418,11 @@
       <div class="container">
         <br><br><br><br>
         <h1 align=mt-3">MVT First-Fit</h1>
-
+        <p>
+          First Fit fits data into memory by scanning from the beginning of available memory to the end, until the
+          first free space which is at least big enough to accept the data is found. This space is then allocated to
+          the data. Any left over becomes a smaller, separate free space.
+        </p>
 
         <div class="row">
           <div class="col-md-3  m-5">
