--- a/modules/memory-management/mvt-worst-fit.html
+++ b/modules/memory-management/mvt-worst-fit.html
@@ -414,7 +414,9 @@ function Compact() {
       <div class="container">
         <br><br><br><br>
         <h1 align=mt-3">MVT Worst-Fit</h1>
-
+        <p>
+            Worst Fit allocates a process to the partition which is largest sufficient among the freely available partitions available in the main memory. If a large process comes at a later stage, then memory will not have space to accommodate it
+        </p>
 
         <div class="row">
           <div class="col-md-3  m-5">
