--- a/modules/memory-management/mft-best-fit.html
+++ b/modules/memory-management/mft-best-fit.html
@@ -343,8 +343,7 @@
 </script>
 
 <style>
-
-  .transition-class{
+  .transition-class {
     transition: all 0.5s;
   }
 
@@ -398,6 +397,11 @@
 
           <div class="m-2">
             <h1>Best Fit</h1>
+            <p>
+              The best fit deals with allocating the smallest free partition which meets the requirement of the
+              requesting process. This algorithm first searches the entire list of free partitions and considers the
+              smallest hole that is adequate. It then tries to find a hole which is close to actual process size needed.
+            </p>
             <div class="form-group">
               <label></label>
               <input type="text" class="form-control" id="num-parts" placeholder="Enter number of partitions">
