--- a/modules/memory-management/mvt-best-fit.html
+++ b/modules/memory-management/mvt-best-fit.html
@@ -433,7 +433,9 @@ function calcExtFrag(pro_size) {
       <div class="container">
         <br><br><br><br>
         <h1 align=mt-3">MVT Best Fit</h1>
-
+        <p>
+            The best fit deals with allocating the smallest free partition which meets the requirement of the requesting process. This algorithm first searches the entire list of free partitions and considers the smallest hole that is adequate. It then tries to find a hole which is close to actual process size needed.
+        </p>
         <div class="row">
           <div class="col-md-3  m-5">
             <div class="m-2">
