--- a/modules/process-syncronization/dining-phil.html
+++ b/modules/process-syncronization/dining-phil.html
@@ -45,7 +45,7 @@
   ======================================================== -->
 
   <!-- SCRIPT FOR THE PAGE-->
-  <title>Reade</title>
+  <title>Dining Philosopher</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -76,6 +76,7 @@
     </div>
   </header><!-- End Header -->
 
+  
   <div style="padding: 25%;">
     <button type="button" , class="btn btn-primary" , onclick="initiate()" ,
       style="height:70px;width:300px;position:absolute;top:36%;left:10%;border:solid 4px black;font-size:25px">Next!</button>
