--- a/modules/process-syncronization/index.html
+++ b/modules/process-syncronization/index.html
@@ -120,8 +120,8 @@
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
-          <h2>Sceduling Algorithms</h2>
-          <p>All fundamental CPU Scheduling algorithms</p>
+          <h2>Process Synchronization</h2>
+          <p>A few standard synchronization problems</p>
         </div>
 
         <div class="row d-flex justify-content-center" data-aos="fade-up" data-aos-delay="300">
