Fixed indexing and linked

--- a/modules/file-allocation/indexing.html
+++ b/modules/file-allocation/indexing.html
@@ -187,7 +187,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="/index.html">Home</a></li>
+          <a class="nav-link scrollto " href="/index.html">Home</a>
 
       </nav><!-- .navbar -->
 
