--- a/modules/disk-scheduling/disk-scheduling.html
+++ b/modules/disk-scheduling/disk-scheduling.html
@@ -1038,7 +1038,7 @@
       var int2 = parseInt(in_arr[0]);
       sum = sum + (int - int2);
       
-      sum +=  (in_arr[in_arr.length] - in_arr[0]);
+      sum +=  (in_arr[in_arr.length - 1] - in_arr[0]);
 
       allocate_clook();
       return sum;
@@ -1062,7 +1062,7 @@
       var int = parseInt(in_arr[len]);
       var int2 = parseInt(in_arr[flag]);
       sum = sum + (int - int2);
-      sum +=  (in_arr[in_arr.length] - in_arr[0]);
+      sum +=  (in_arr[in_arr.length - 1] - in_arr[0]);
       allocate_clook();
       return sum ;
     }
