--- a/modules/process-syncronization/dining-phil.html
+++ b/modules/process-syncronization/dining-phil.html
@@ -10,8 +10,15 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../../assets/img/favicon.png" rel="icon">
-  <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="../../../../assets/img/favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../../assets/img/favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../../assets/img/favicons/favicon-16x16.png">
+  <link rel="manifest" href="../../assets/img/favicons/site.webmanifest">
+  <link rel="mask-icon" href="../../assets/img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="../../assets/img/favicons/favicon.ico">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="msapplication-config" content="../../assets/img/favicons/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- Google Fonts -->
   <link
@@ -36,13 +43,6 @@
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-  <!-- =======================================================
-  * Template Name: Vesperr - v4.7.0
-  * Template URL: https://bootstrapmade.com/vesperr-free-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 
   <!-- SCRIPT FOR THE PAGE-->
   <title>Dining Philosopher</title>
@@ -153,37 +153,37 @@
     
 
     <button type="button" , id="one" , name="one" ,
-      style="height:125px;width:125px;position: absolute;;top:39%;left:40%;border-radius:25px;border:2px solid #000;  background-image: url('http://icons.iconarchive.com/icons/dapino/people/128/brown-woman-icon.png')">
+      style="height:125px;width:125px;position: absolute;;top:39%;left:40%;border-radius:25px;border:2px solid #000;  background-image: url('img/dining/red-woman-icon.png')">
     </button>
 
 
 
     <button type="button" , id="five" , name="one" ,
-      style="height:125px;width:125px;position:absolute;top:65%;left:29%;border-radius:25px;border:1px solid #000; background-image: url('http://icons.iconarchive.com/icons/diversity-avatars/avatars/128/girl-in-ballcap-icon.png')">
+      style="height:125px;width:125px;position:absolute;top:65%;left:29%;border-radius:25px;border:1px solid #000; background-image: url('img/dining/black-man-icon.png')">
     </button>
 
     <button type="button" , id="two" , name="one" ,
-      style="height:125px;width:125px;position:absolute;top:50%;left:55.5%;border-radius:25px;border:1px solid #000;background-image: url('http://icons.iconarchive.com/icons/dapino/people/128/red-woman-icon.png')">
+      style="height:125px;width:125px;position:absolute;top:50%;left:55.5%;border-radius:25px;border:1px solid #000;background-image: url('img/dining/black-man-icon.png')">
     </button>
 
     <button type="button" , id="four" , name="one" ,
-      style="height:125px;width:125px;position:absolute;top:92%;left:37%;border-radius:25px;border:1px solid #000;background-image: url('http://icons.iconarchive.com/icons/dapino/people/128/black-man-icon.png')">
+      style="height:125px;width:125px;position:absolute;top:92%;left:37%;border-radius:25px;border:1px solid #000;background-image: url('img/dining/black-man-icon.png')">
     </button>
 
     <button type="button" , id="three" , name="one" ,
-      style="height:125px;width:125px;position:absolute;top:83%;left:55%;border-radius:25px;border:1px solid #000;background-image: url('http://icons.iconarchive.com/icons/designbolts/free-male-avatars/128/Male-Avatar-Hair-icon.png')">
+      style="height:125px;width:125px;position:absolute;top:83%;left:55%;border-radius:25px;border:1px solid #000;background-image: url('img/dining/red-woman-icon.png')">
     </button>
 
 
-    <img src="http://icons.iconarchive.com/icons/cute-little-factory/breakfast/128/sugar-bowl-filled-icon.png"
+    <img src="img/dining/sugar-bowl-filled-icon.png"
       style="position: absolute;height: 100px;width: 100px; top: 51%;left:42%;visibility: hidden;" id="bowl1">
-    <img src="http://icons.iconarchive.com/icons/cute-little-factory/breakfast/128/sugar-bowl-filled-icon.png"
+    <img src="img/dining/sugar-bowl-filled-icon.png"
       style="position: absolute;height: 100px;width: 100px; top: 66%;left:36.6%;visibility: hidden;" id="bowl5">
-    <img src="http://icons.iconarchive.com/icons/cute-little-factory/breakfast/128/sugar-bowl-filled-icon.png"
+    <img src="img/dining/sugar-bowl-filled-icon.png"
       style="position: absolute;height: 100px;width: 100px; top: 58%;left:51%;visibility: hidden;" id="bowl2">
-    <img src="http://icons.iconarchive.com/icons/cute-little-factory/breakfast/128/sugar-bowl-filled-icon.png"
+    <img src="img/dining/sugar-bowl-filled-icon.png"
       style="position: absolute;height: 100px;width: 100px; top: 82%;left:41%;visibility: hidden;" id="bowl4">
-    <img src="http://icons.iconarchive.com/icons/cute-little-factory/breakfast/128/sugar-bowl-filled-icon.png"
+    <img src="img/dining/sugar-bowl-filled-icon.png"
       style="position: absolute;height: 100px;width: 100px; top: 77%;left:51%;visibility: hidden;" id="bowl3">
 
 
@@ -191,25 +191,25 @@
 
 
     <button type="button" , id="first" , name="one" ,
-      style="height:50px;width:50px;position:absolute;top:59%;left:38%;border-radius:50px;border:2px solid #000;background-image: url('http://icons.iconarchive.com/icons/icons8/windows-8/32/Food-Fork-icon.png') ; background-repeat: no-repeat;">
+      style="height:50px;width:50px;position:absolute;top:59%;left:38%;border-radius:50px;border:2px solid #000;background-image: url('img/dining/Food-Fork-icon.png') ; background-repeat: no-repeat;">
     </button>
 
     <button type="button" , id="second" , name="one" ,
-      style="height:50px;width:50px;position:absolute;top:54%;left:49%;border-radius:50px;border:2px solid #333;background-image: url('http://icons.iconarchive.com/icons/icons8/windows-8/32/Food-Fork-icon.png') ; background-repeat: no-repeat;">
+      style="height:50px;width:50px;position:absolute;top:54%;left:49%;border-radius:50px;border:2px solid #333;background-image: url('img/dining/Food-Fork-icon.png') ; background-repeat: no-repeat;">
     </button>
 
     <button type="button" , id="third" , name="one" ,
-      style="height:50px;width:50px;position:absolute;top:70%;left:55%;border-radius:50px;border:2px solid #000;background-image: url('http://icons.iconarchive.com/icons/icons8/windows-8/32/Food-Fork-icon.png') ; background-repeat: no-repeat;"></button>
+      style="height:50px;width:50px;position:absolute;top:70%;left:55%;border-radius:50px;border:2px solid #000;background-image: url('img/dining/Food-Fork-icon.png') ; background-repeat: no-repeat;"></button>
 
     <button type="button" , id="fifth" , name="one" ,
-      style="height:50px;width:50px;position:absolute;top:79%;left:38%;border-radius:50px;border:2px solid #000;background-image: url('http://icons.iconarchive.com/icons/icons8/windows-8/32/Food-Fork-icon.png') ; background-repeat: no-repeat;">
+      style="height:50px;width:50px;position:absolute;top:79%;left:38%;border-radius:50px;border:2px solid #000;background-image: url('img/dining/Food-Fork-icon.png') ; background-repeat: no-repeat;">
     </button>
 
     <button type="button" , id="fourth" , name="one" ,
-      style="height:50px;width:50px;position:absolute;top:88%;left:48%;border-radius:50px;border:2px solid #000;background-image: url('http://icons.iconarchive.com/icons/icons8/windows-8/32/Food-Fork-icon.png') ; background-repeat: no-repeat;">
+      style="height:50px;width:50px;position:absolute;top:88%;left:48%;border-radius:50px;border:2px solid #000;background-image: url('img/dining/Food-Fork-icon.png') ; background-repeat: no-repeat;">
     </button>
 
-    <img src="http://icons.iconarchive.com/icons/cute-little-factory/breakfast/128/sugar-bowl-filled-icon.png"
+    <img src="img/dining/sugar-bowl-filled-icon.png"
       style="position: absolute;height: 100px;width: 100px; top: 66%;left:44.5%">
 
 
