--- a/modules/process-syncronization/dining-phil.html
+++ b/modules/process-syncronization/dining-phil.html
@@ -69,7 +69,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="/index.html">Home</a></li>
+          <li><a class="nav-link scrollto " href="../../index.html">Home</a></li>
 
       </nav><!-- .navbar -->
 
