--- a/modules/process-syncronization/index.html
+++ b/modules/process-syncronization/index.html
@@ -37,14 +37,6 @@
   <!-- Template Main CSS File -->
   <link href="./../../assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Vesperr - v4.7.0
-  * Template URL: https://bootstrapmade.com/vesperr-free-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
-
 <style>
   #about {
     margin: auto;
@@ -90,7 +82,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="/index.html">Home</a></li>
+          <li><a class="nav-link scrollto " href="../../index.html">Home</a></li>
 
       </nav><!-- .navbar -->
 
