--- a/modules/process-syncronization/index.html
+++ b/modules/process-syncronization/index.html
@@ -148,6 +148,18 @@
               <h3><a href="./barrier.html">Barrier Semaphore</a></h3>
             </div>
           </div>
+          <div class="col-lg-3 col-md-4">
+            <div class="icon-box">
+              <i class="ri-store-line" style="color: #ffbb2c;"></i>
+              <h3><a href="./cigarette_smokers.html">Cigarette Smokers</a></h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+              <h3><a href="./sleepingBarber.html">Sleeping Barber</a></h3>
+            </div>
+          </div>
           </div>
 
 
