Updated wiki link

--- a/modules/process-syncronization/cigarette_smokers.html
+++ b/modules/process-syncronization/cigarette_smokers.html
@@ -35,7 +35,7 @@
 		            <hr class="my-4">
 		            <p>Consider a system with three smoker processes and one agent process. One of the smoker processes has paper, another has tobacco, and the third has matches. The agent places two of the ingredients on the table. The smoker who has the remaining ingredient then makes and smoke a cigarette, signaling the agent on completion. The agent then puts out another two of the three ingredients, and the cycle repeats.</p>
 		            <p class="lead">
-		              <a class="btn btn-success" href="#" role="button">Wiki</a>
+		              <a class="btn btn-success" href="https://en.wikipedia.org/wiki/Cigarette_smokers_problem#:~:text=The%20cigarette%20smokers%20problem%20is,be%20justified%20by%20practical%20considerations.%22" role="button">Wiki</a>
 		            </p>
 		            <p class="lead">
 		              <a class="btn btn-success" href="cigarette_smokers.html#anim" role="button">Play</a>
